<resources>
    <string name="app_name">Travel Journal</string>
    <string name="database">travel-journal</string>
    <string name="confirm">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_holiday">Add Holiday</string>
    <string name="edit_holiday">Edit Holiday</string>
    <string name="add_photo">Add Photo</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="add_place">Add Place</string>
    <string name="edit_place">Edit Place</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="notes">Notes:</string>
    <string name="empty">Nothing to display</string>
    <string name="location">Location</string>
    <string name="unknown">Unknown</string>
    <string name="hint_edit">Insert additional notes</string>
    <string name="travel_companions">Travel Companions</string>

    <string name="welcome">
        Welcome to Travel Journal\n
        \n
        - Slide the drawer out on the left to view your Holidays, Places, and Pictures.\n
        \n
        - Use the action button in the bottom right to add new Holidays, Places, and Pictures.\n
        \n
        - Swipe LEFT on an item to delete, swipe RIGHT to edit, and tap to open.
    </string>
</resources>
