<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.karanthaker.traveljournal.AddPlace">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/holidayActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/add_place"/>

        <EditText
            android:id="@+id/placeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Place Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/placeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Date Visited" />

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/setHolidayStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/location" />

        <fragment
            android:id="@+id/place_autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/travel_companions"/>

        <TextView
            android:id="@+id/travelCompanions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Add travel companions using the box below"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newCompanion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Joe Bloggs" />

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/addTravelCompanion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+" />

        </LinearLayout>

        <EditText
            android:id="@+id/placeNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_edit" />

        <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/add_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
