<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.karanthaker.traveljournal.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <com.getbase.floatingactionbutton.AddFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:animateLayoutChanges="true"
        app:fab_labelsPosition="left"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/pink_pressed"
        app:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_holiday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_title="@string/add_holiday"
            app:fab_icon="@drawable/ic_airplane_white_24dp"
            app:fab_colorNormal="@color/pink"
            app:fab_colorPressed="@color/pink_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_title="@string/add_place"
            app:fab_icon="@drawable/ic_place_white_24dp"
            app:fab_colorNormal="@color/purple"
            app:fab_colorPressed="@color/purple_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_size="mini"
            app:fab_title="@string/add_photo"
            app:fab_icon="@drawable/ic_camera_white_24dp"
            app:fab_colorNormal="@color/indigo"
            app:fab_colorPressed="@color/indigo_pressed"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
